[package]
name = "rerail-internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
encoding_rs = "0.8.33"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
tsify = "0.4.5"
flexbuffers = "2.0.0"
